font increace/decrease

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         Text Border Color: <input type="color" onchange="getTextBorderColor(this.value)" id="color" class="border-color"
             value="#121212" />
         Text Color: <input type="color" onchange="getTextColor(this.value)" id="color" class="shape-color"
-            value="#EEFF00" />
+            value="#121212" />
+            <button onclick="onIncreaseFont()"><img src="ICONS/increase font - icon.png"/></button>
+            <button onclick="onDecreaseFont()"><img src="ICONS/decrease font - icon.png"/></button>
+            <button onclick="onSwitchLine()"><img src="ICONS/up-and-down-opposite-double-arrows-side-by-side.png"/></button>
     </div>
     <div class="img-container">
     </div>
