--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         download="">Download</a></button>
                 <div class="inputs">
 
-                    <button class="upload-btn" onclick="uploadImg()">Upload Image from Canvas</button>
+                    <button class="upload-btn" onclick="uploadImg()">Share Image</button>
                     <p class="user-msg"></p>
                     <div class="share-container"></div>
                 </div>
@@ -97,8 +97,11 @@
                 Rishon
                 Lesyion, Israel.
                 In my spare time I love playing in the computer and watching Netflix and Chill.
-                My goal is to become and real Full Stack Developer because I really love to program and making my
-                own stuff.
+               <br>
+
+                    My goal is to become and real Full Stack Developer because I really love to program and making my
+                    own stuff.
+                
             </p>
         </footer>
     </div>
