--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                 <button onclick="onSwitchLine()"><img
                         src="ICONS/up-and-down-opposite-double-arrows-side-by-side.png" /></button>
                 <button onclick="onAddLine()"><img src="ICONS/add.png" /></button>
+                <button onclick="onMoveLineUp()"><img src="ICONS/moveUp.jpg" /></button>
+                <button onclick="onMoveLineDown()"><img src="ICONS/moveDown.jpg" /></button>
                 <button class="save-btn" onclick="onSaveMeme()"><img src="ICONS/save.png" /></button>
                 <div>
 
@@ -67,6 +69,8 @@
         </div>
         <button class="rand-img flex" onclick="onClickRandMeme()">Im flexible</button>
         <div class="img-container">
+        </div>
+        <div class="saved-img-container">
         </div>
     </div>
     <!-- Me -->
